kubernetes/keycloak/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-database
  namespace: keycloak
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: keycloak-database
---
apiVersion: apps/v1  
kind: StatefulSet
metadata:
  name: keycloak-database
  namespace: keycloak
spec:
  serviceName: keycloak-database
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-database
  template:
    metadata:
      labels:
        app: keycloak-database
    spec:
      volumes:
        - name: postgres
          persistentVolumeClaim: 
            claimName: keycloak-database
      containers:
      - name: postgres
        image: postgres:14-alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
          subPath: pgdata
        ports:
        - containerPort: 5432
      terminationGracePeriodSeconds: 60
